Adding initial game server secrets management
