# tf-deploy/apis/Repository.openapi+json.json
@@ -73,18 +73,6 @@
                 }
             }
         },
-        "/GameServers": {
-            "get": {
-                "summary": "GetGameServers",
-                "description": "GetGameServers",
-                "operationId": "GetGameServers",
-                "responses": {
-                    "200": {
-                        "description": "null"
-                    }
-                }
-            }
-        },
         "/Player": {
             "get": {
                 "summary": "GetPlayer",
@@ -159,6 +147,125 @@
                 "responses": {
                     "200": {
                         "description": "null"
+                    }
+                }
+            }
+        },
+        "/GameServers": {
+            "get": {
+                "summary": "GetGameServers",
+                "description": "GetGameServers",
+                "operationId": "GetGameServers",
+                "responses": {
+                    "200": {
+                        "description": "null"
+                    }
+                }
+            }
+        },
+        "/GameServer/{id}/secrets/{secret}": {
+            "get": {
+                "summary": "GetGameServerSecret",
+                "description": "GetGameServerSecret",
+                "operationId": "GetGameServerSecret",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "secret",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": null
+                    }
+                }
+            },
+            "post": {
+                "summary": "CreateGameServerSecret",
+                "description": "CreateGameServerSecret",
+                "operationId": "CreateGameServerSecret",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "secret",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": null
+                    }
+                }
+            },
+            "patch": {
+                "summary": "UpdateGameServerSecret",
+                "description": "UpdateGameServerSecret",
+                "operationId": "UpdateGameServerSecret",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "secret",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": null
                     }
                 }
             }
